--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,44 @@
 body {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif !important;
 }
+
+.btn-primary{
+  background-color: #f7a206 !important;
+  border: none !important;
+  border-radius: 3px !important;
+}
+.user_authentication{
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background-color: #ececec;
+}
+.user_authentication form{
+  width: 35%;
+  margin: auto;
+}
+.form-group{
+  margin-bottom: 15px;
+}
+.form-control{
+  font-size: 18px;
+}
+.form-control,.btn{
+  height: 50px;
+}
+.btn{
+  box-shadow: 3px 3px 6px #b1b1b1;
+  font-size: 23px !important;
+}
+.terms{
+  font-size: 14px;
+}
+.form-group a{
+  text-decoration: none;
+  font-weight: 600;
+  color: #f7a206;
+}
+.form-group a:hover{
+  color: #f7a206;   
+}
